# hyperion.ng

./: CMakeLists.txt  CompileHowto.md  CrossCompileHowto.md  HyperionConfig.h.in  README.md  tags
.github/workflows/: docker.yml
cmake/: FindGMock.cmake  FindOBS.cmake  FindPulse.cmake  FindSoundIO.cmake
include/grabber/: AlsaGrabber.h  AlsaWrapper.h  JackGrabber.h  JackWrapper.h  ObsGrabber.h  PulseGrabber.h  PulseWrapper.h  SoundIOGrabber.h  SoundIOWrapper.h
include/hyperion/: AudioProcessor.h  CaptureCont.h  GrabberWrapper.h  Hyperion.h  HyperionIManager.h  IHyperion.h  PriorityMuxer.h
include/utils/: AudioPacket.h  AudioPacketData.h  Components.h  ExponentialMovingAverage.h  GlobalSignals.h  Image.h  ImageData.h  MelFrequencyCepstralCoefficients.h
libsrc/effectengine/: EffectEngine.cpp
libsrc/grabber/: CMakeLists.txt
libsrc/grabber/alsa/: AlsaGrabber.cpp  AlsaWrapper.cpp  CMakeLists.txt
libsrc/grabber/amlogic/: CMakeLists.txt
libsrc/grabber/dispmanx/: CMakeLists.txt
libsrc/grabber/jack/: CMakeLists.txt  JackGrabber.cpp  JackWrapper.cpp
libsrc/grabber/obs/: CMakeLists.txt  ObsGrabber.cpp  hyperion-output.c
libsrc/grabber/pulse/: CMakeLists.txt  PulseGrabber.cpp  PulseWrapper.cpp
libsrc/grabber/soundio/: CMakeLists.txt  SoundIOGrabber.cpp  SoundIOWrapper.cpp
libsrc/grabber/x11/: X11Grabber.cpp
libsrc/hyperion/: AudioProcessor.cpp  CMakeLists.txt  CaptureCont.cpp  Grabber.cpp  GrabberWrapper.cpp  Hyperion.cpp  HyperionIManager.cpp  PriorityMuxer.cpp
libsrc/leddevice/: LedDevice.cpp
libsrc/utils/: CMakeLists.txt  ImageResampler.cpp  ImageUtils.cpp
src/: CMakeLists.txt
src/hyperion-obs/: CMakeLists.txt  HyperionProperties.cpp  HyperionProperties.h  HyperionProperties.ui  ObsWrapper.cpp  ObsWrapper.h  hyperion-obs-module.cpp  hyperion-obs.cpp
src/hyperiond/: CMakeLists.txt  hyperiond.cpp  hyperiond.h
test/: CMakeLists.txt  MockHyperion.h  TestBlackBorderDetector.cpp  TestBlackBorderProcessor.cpp  TestConfigFile.cpp  TestHyperionPng.cpp  TestImage2LedsMap.cpp  TestQRegExp.cpp  TestQtScreenshot.cpp  TestRgbImage.cpp  TestSpi.cpp  TestX11Performance.cpp
